--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,9 @@
 .space-y-24
   = render 'hero'
+  = render 'about_us'
+  = render 'product_customization'
+  = render 'product_costumization_feedback'
+  = render 'want_product_customization'
 
 
 
